--- a/fundamentos/bloco-3-introducao-a-html-e-css/dia-2-html-css-primeiros-passos-em-css/index.html
+++ b/fundamentos/bloco-3-introducao-a-html-e-css/dia-2-html-css-primeiros-passos-em-css/index.html
@@ -11,12 +11,15 @@
       ul{
         background-color: aquamarine;
       }
+      .article{
+        background-color: blanchedalmond;
+      }
     </style>
   </head>
   <body>
     <h1>Exercícios 3.2</h1>
-    <p>Qual é a sua cor favorita?</p>
-    <ul>
+    <p class="article">Qual é a sua cor favorita?</p>
+    <ul class="article">
       <li>Amarelo</li>
       <li>Vermelho</li>
       <li>Marrom</li>
