--- a/fundamentos/bloco-3-introducao-a-html-e-css/dia-2-html-css-primeiros-passos-em-css/index.html
+++ b/fundamentos/bloco-3-introducao-a-html-e-css/dia-2-html-css-primeiros-passos-em-css/index.html
@@ -1,28 +1,37 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-  <head>
-    <meta charset="UTF-8">
-    <title>HTML</title>
-    <style>
-      h1{
-        font-size: 65px;
-        color: orange;
-      }
-      ul{
-        background-color: aquamarine;
-      }
-      .article{
-        background-color: blanchedalmond;
-      }
-    </style>
-  </head>
-  <body>
-    <h1>Exercícios 3.2</h1>
-    <p class="article">Qual é a sua cor favorita?</p>
-    <ul class="article">
-      <li>Amarelo</li>
-      <li>Vermelho</li>
-      <li>Marrom</li>
-    </ul>
-  </body>
+
+<head>
+  <meta charset="UTF-8">
+  <title>HTML</title>
+  <style>
+    p {
+      font-weight: 600;
+    }
+    h1 {
+      font-family: sans-serif;
+      font-size: 65px;
+      color: orange;
+    }
+
+    ul {
+      background-color: aquamarine;
+    }
+
+    .article {
+      background-color: blanchedalmond;
+    }
+  </style>
+</head>
+
+<body>
+  <h1>Exercícios 3.2</h1>
+  <p class="article">Qual é a sua cor favorita?</p>
+  <ul class="article">
+    <li>Amarelo</li>
+    <li>Vermelho</li>
+    <li>Marrom</li>
+  </ul>
+</body>
+
 </html>
