--- a/fundamentos/bloco-3-introducao-a-html-e-css/dia-2-html-css-primeiros-passos-em-css/index.html
+++ b/fundamentos/bloco-3-introducao-a-html-e-css/dia-2-html-css-primeiros-passos-em-css/index.html
@@ -22,6 +22,15 @@
       line-height: 40px;
     }
 
+    .yellow{
+      background-color: yellow;
+    }
+    .red{
+      background-color: red;
+    }
+    .brown{
+      background-color: brown;
+    }
     .article {
       background-color: blanchedalmond;
     }
@@ -36,9 +45,9 @@
   <h1>Exercícios 3.2</h1>
   <p class="article">Qual é a sua cor favorita?</p>
   <ul class="article">
-    <li>Amarelo</li>
-    <li>Vermelho</li>
-    <li>Marrom</li>
+    <li class="yellow">Amarelo</li>
+    <li class="red">Vermelho</li>
+    <li class="brown">Marrom</li>
   </ul>
 </body>
 
