--- a/fundamentos/bloco-3-introducao-a-html-e-css/dia-2-html-css-primeiros-passos-em-css/index.html
+++ b/fundamentos/bloco-3-introducao-a-html-e-css/dia-2-html-css-primeiros-passos-em-css/index.html
@@ -4,40 +4,9 @@
 <head>
   <meta charset="UTF-8">
   <title>HTML</title>
+  <link rel="stylesheet" type="text/css" href="style.css"
   <style>
-    p {
-      font-weight: 600;
-      font-size: 3em;
-      font-style: italic;
-    }
-    h1 {
-      font-family: sans-serif;
-      font-size: 65px;
-      color: orange;
-      text-decoration: underline;
-    }
-
-    ul {
-      background-color: aquamarine;
-      line-height: 40px;
-    }
-
-    .yellow{
-      background-color: yellow;
-    }
-    .red{
-      background-color: red;
-    }
-    .brown{
-      background-color: brown;
-    }
-    .article {
-      background-color: blanchedalmond;
-    }
-    body {
-      font-size: 16px;
-      text-align: center;
-    }
+  
   </style>
 </head>
 
