--- a/fundamentos/bloco-5-javascript-dom-eventos-e-web-storage/dia-1-javascript-dom-e-seletores/index.html
+++ b/fundamentos/bloco-5-javascript-dom-eventos-e-web-storage/dia-1-javascript-dom-e-seletores/index.html
@@ -42,6 +42,16 @@
       </section>
     </main>
     <script>
+      document.getElementsByTagName('p')[1].innerText = "Com persistência e dedicação serei uma desenvolvedora de sucesso";
+
+      document.getElementsByClassName('main-contente')[0].style.backgroundColor = '(rgb(76,164,109))';   
+
+      document.getElementsByClassName('main-content')[1].style.backgroundColor = 'white';  
+
+      document.getElementsByClassName('title').innerText = "Exercício 5.1 - JavaScript";
+
+      document.getElementsByTagName('p')[0].innerText = "PADRÃO DO NOSSO SITE"
+
         /*
         Aqui você vai modificar os elementos já existentes utilizando apenas as funções:
         - document.getElementById()
