first exercise fixation

--- a/fundamentos/bloco-6-html-e-css-forms-flexbox-e-responsivo/dia-1-html-css-forms/index.html
+++ b/fundamentos/bloco-6-html-e-css-forms-flexbox-e-responsivo/dia-1-html-css-forms/index.html
@@ -6,10 +6,12 @@
 </head>
 <body>
   <form action="" method="post">
-    <label for="meuEmail"><input type="email" name="email" id="meuEmail" placeholder="Digite o seu email" required autocomplete="off" autofocus/>E-mail</label>
+    <label for="meuEmail">Email</label>
+      <input type="email" name="email" id="meuEmail" placeholder="Digite o seu email" required autocomplete="off" autofocus/>
     <br>
     <br>
-    <label><input type="password" name="password" id="password" placeholder="Digite a sua senha" required/>senha</label>
+    <label for="password">Senha</label>
+      <input type="number" name="number" id="password" placeholder="Digite a sua senha" required/>
     <br>
     <br>
     <label for="checkbox"><input type="checkbox" id="checkbox" name="checkbox" value="lcheck" checked></label>
