first exercise beautiful

--- a/fundamentos/bloco-6-html-e-css-forms-flexbox-e-responsivo/dia-1-html-css-forms/index.html
+++ b/fundamentos/bloco-6-html-e-css-forms-flexbox-e-responsivo/dia-1-html-css-forms/index.html
@@ -5,18 +5,20 @@
   <title>test</title>
 </head>
 <body>
+  <h1>Exercício de Fixação</h1>
   <form action="" method="post">
     <label for="meuEmail">Email</label>
-      <input type="email" name="email" id="meuEmail" placeholder="Digite o seu email" required autocomplete="off" autofocus/>
+      <input type="email" name="email" id="meuEmail" placeholder="Digite seu email" required autocomplete="off" autofocus/>
     <br>
     <br>
     <label for="password">Senha</label>
-      <input type="number" name="number" id="password" placeholder="Digite a sua senha" required/>
+      <input type="password" name="senha" id="password" placeholder="Digite sua senha" required/>
     <br>
     <br>
-    <label for="checkbox"><input type="checkbox" id="checkbox" name="checkbox" value="lcheck" checked></label>
+    <label for="checkbox"><input type="checkbox" id="checkbox" name="checkbox" value="lcheck" checked>Lembre-me</label>
     <br>
-    <button type="submit">entrar</button>
+    <br>
+    <button type="submit">Entrar</button>
   </form>
 </body>
 </html>
