--- a/fundamentos/bloco-6-html-e-css-forms-flexbox-e-responsivo/dia-1-html-css-forms/form.html
+++ b/fundamentos/bloco-6-html-e-css-forms-flexbox-e-responsivo/dia-1-html-css-forms/form.html
@@ -2,43 +2,47 @@
 <html lang="pt-br">
 <head>
   <meta charset="UTF-8">
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="styleForm.css">
   <title>form viagem</title>
 </head>
 <body>
   <header>
     <form action="" method="post">
-      <label for="input-user">Nome:</label>
-        <input type="text" id="input-user" name="user"/>
+      <label for="input-user">Nome Completo:</label>
+        <input type="text" id="input-user" name="user" minlength="10" maxlength="40" class="name"/>
         <br>
-        <label for="input-email">Email:</label>
-        <input type="email" id="input-email" name="email"/>
-        <br>
+        <label for="input-email">E-mail:</label>
+        <input type="email" id="input-email" name="email" minlength="10" maxlength="50" class="email"/>
+        <p>Destino Preferido:</p>
         <label for="check-option-1"></label>
-        <input type="radio" id="check-option-1" name="option">Opção 1
+        <input type="radio" id="check-option-1" name="option">Cidade
         <label for="check-option-2"></label>
-        <input type="radio" id="check-option-2" name="option">Opção 2
+        <input type="radio" id="check-option-2" name="option">Campo
         <label for="check-option-3"></label>
-        <input type="radio" id="check-option-3" name="option">Opção 3
+        <input type="radio" id="check-option-3" name="option">Praia
         <label for="check-option-4"></label>
-        <input type="radio" id="check-option-4" name="option">Opção 4
+        <input type="radio" id="check-option-4" name="option">Montanhas
         <br>
-        <p>Espaço para digitar a resposta:</p>
-        <textarea id="input-resposta" name="dissertação" cols="40" rows="10"></textarea>
+        <p>Por que você deveria ser a pessoa desenvolvedora a ganhar o concurso TrybeTrip?</p>
+        <textarea id="input-resposta" name="dissertação" cols="40" rows="10" maxlength="500"></textarea>
         <br>
+        <p>Qual a melhor data para realizar sua viagem?</p>
         <label for="input-date">Data:</label>
         <input type="date" id="input-date" name="date"/>
+        <p>Gostaria de receber outras incríveis oportunidades oferecidas pela Trybe?</p>
+        <label for="acordo">Sim</label>
+        <input type="checkbox" id="acordo" name="concordo"/>
         <br>
-        <label for="acordo">Concordo 1</label>
-        <input type="checkbox" id="acordo" name="concordo" required/>
+        <Label for="acordo-2">Não</Label>
+        <input type="checkbox" id="acordo-2" name="concordo">
         <br>
-        <label for="acordo-2">Concordo 2</label>
-        <input type="checkbox" id="acordo-2" name="concordo" required/>
+        <input type="radio" name="validado"/>Concordo que imagens das minhas férias poderão ser usadas na divulgação de concursos futuros.
         <br>
-        <button type="submit" class="button-send" name="enviado">Enviar</button>
-        <button type="reset" class="button-clear" name="apagado">Apagar</button>
+        <button type="submit" class="button" name="enviado" id="button1">Enviar</button>
+        <button type="reset" class="button" name="apagado">Apagar</button>
         <br>
         <p class="id">Formato do formulário TrybeTrip</p>
     </form>
   </header>
+  <script src="formscript.js"></script>
 </body>
