--- a/fundamentos/bloco-6-html-e-css-forms-flexbox-e-responsivo/dia-2-bibliotecas-javascript-e-frameworks-css/library.html
+++ b/fundamentos/bloco-6-html-e-css-forms-flexbox-e-responsivo/dia-2-bibliotecas-javascript-e-frameworks-css/library.html
@@ -6,6 +6,7 @@
   <meta name="ṽiewport" content="width=device-width, initial-scale=1"/>
   <title>form viagem</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
+  <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/pikaday/css/pikaday.css">
 </head>
 <body>
   <header class="container text-center">
@@ -45,8 +46,8 @@
 
       <div class="container">
       <p class="lead">Qual a melhor data para realizar sua viagem?</p>
-      <label for="input-date">Data:</label>
-      <input type="date" id="input-date" name="date"/>
+      <label for="datepicker">Data:</label>
+      <input type="text" id="datepicker" name="date"/>
     </div>
 
       <br>
@@ -71,4 +72,9 @@
       <p class="form-text">Formato do formulário TrybeTrip</p>
     </main>
   </form>
+  <script src="https://cdn.jsdelivr.net/npm/pikaday/pikaday.js"></script>
+  <script src="pikaday.js"></script>
+<script>
+    var picker = new Pikaday({ field: document.getElementById('datepicker') });
+</script>
 </body>
